test and java options added to root build